--- a/src/slork/templates/index.html
+++ b/src/slork/templates/index.html
@@ -3,12 +3,21 @@
 <head>
     <title>{{ title }}</title>
     <style>
+        body { 
+            background-color: #eee;
+        }
         form {
-            max-width: 900px;
+            max-width: 750px;
             margin-left: auto;
             margin-right: auto;
+            height: calc(100vh - 100px);
+            filter: drop-shadow(0 0 20px #aaa);
+            background-color:white;
+            padding: 40px;
+            overflow-y: auto;
         }
         img {
+            max-width: 100%;
             max-height: 600px;
         }
         input[type='text'] {
