Web app - don't generate img tag if no image is set.

--- a/src/slork/templates/index.html
+++ b/src/slork/templates/index.html
@@ -33,7 +33,9 @@
 </head>
 <body>
     <form method="post" onsubmit="disableInput()">
+        {% if image %}
         <img src="{{ image }}">
+        {% endif %}
         {% for text_line in text.split('\n') %}    
         <p>{{ text_line }}</p>
         {% endfor %}
